fixed requested spacing

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -20,21 +20,25 @@
   position: absolute;
   overflow: hidden;
   top: 0;
-  left: 0; }
+  left: 0;
+}
 
 .overlay-fade-in p {
   letter-spacing: 0.15em;
   color: #f4f4f4;
   font-size: 24px;
   opacity: 0;
-  transition: all 0.2s linear; }
+  transition: all 0.2s linear;
+}
 
 .overlay-fade-in img {
-  transition: all 0.2s linear; }
+  transition: all 0.2s linear;
+}
 
 .overlay-fade-in .image-overlay-content {
   opacity: 0;
-  transition: all 0.4s ease-in-out; }
+  transition: all 0.4s ease-in-out;
+}
 
 .overlay-fade-in h2 {
   color: #f4f4f4;
@@ -42,7 +46,8 @@
   margin-top: 40%;
   opacity: 0;
   background: rgba(0, 0, 0, 0);
-  transition: all 0.2s ease-in-out; }
+  transition: all 0.2s ease-in-out;
+}
 
 .overlay-fade-in .button {
   display: inline-block;
@@ -54,22 +59,29 @@
   box-shadow: 0 0 1px #000;
   position: relative;
   opacity: 0;
-  transition: all 0.2s ease-in-out; }
+  transition: all 0.2s ease-in-out;
+}
 
 .overlay-fade-in .button:hover {
-  box-shadow: 0 0 5px #000; }
+  box-shadow: 0 0 5px #000;
+}
 
 .overlay-fade-in:hover img {
-  transform: scale(1.2); }
+  transform: scale(1.2);
+}
 
 .overlay-fade-in:hover .image-overlay-content {
-  opacity: 1; }
+  opacity: 1;
+}
 
 .overlay-fade-in:hover h2, .overlay-fade-in p, .overlay-fade-in .button {
-  opacity: 1; }
+  opacity: 1;
+}
 
 .overlay-fade-in:hover p {
-  transition-delay: 0.1s; }
-  
+  transition-delay: 0.1s;
+}
+
 .overlay-fade-in:hover .button {
-  transition-delay: 0.2s; }
+  transition-delay: 0.2s;
+}
